--- a/_config.yml
+++ b/_config.yml
@@ -2,8 +2,8 @@
 
 title: "Kyle Tuft"
 description: "acta non verba"
-logo: # 120x120 px default image used for Twitter summary card
-teaser: # 400x250 px default teaser image used in image archive grid
+logo: Profile Logo.png # 120x120 px default image used for Twitter summary card
+teaser: Web Teaser.png # 400x250 px default teaser image used in image archive grid
 locale: en
 url:
 feed:
@@ -37,7 +37,7 @@ owner:
     ad-client:
     ad-slot:
   bio:
-  avatar: bio-photo.jpg # 160x160 px image for author byline
+  avatar: Profile Logo.png # 160x160 px image for author byline
   disqus-shortname:
 
 
